--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "src/dennard.js",
   "scripts": {
+    "start": "node src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Felix Rieseberg <felix@felixrieseberg.com>",
